Fixed layout when the browser is small and corrected background cutting off

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@
 	padding-top: 5px;
 	padding-bottom: 1px;
 	width: 100%;
-	min-width: 1200px;
+	min-width: 1480px;
 }
 
 #navbar-background {
@@ -72,29 +72,29 @@ img {
 	padding-bottom: 0;
 	bottom: 0px;
 	height: 100%;
-	min-width: 1200px;
+	min-width: 1480px;
 }
 
 section, #home {
 	display: block;
-	padding: 80px;
+	padding-left: 80px;
+	padding-top: 60px;
 	padding-bottom: 0px;
 	padding-right: 0px;
 	background: url(../images/backgroundLarge.jpg);
 	background-repeat: no-repeat;
 	height: 100%;
-	width: 100%;
 	position: relative;
 }
 
 #home {
 	padding-left: 0px;
-	min-width: 1200px;
+	min-width: 1480px;
 }
 
 #main-container {
 	padding-left: 80px;
-	min-width: 1070px;
+	min-width: 1320px;
 }
 
 a {
@@ -154,7 +154,6 @@ section.tabContent.hide {
 
 section {
 	color: white;
-	padding-top: 0;
 	font-family: Futura;
 	height: 100%;
 }
@@ -166,6 +165,8 @@ section ul {
 section h1 {
 	font-size: 50px;
 	display: block;
+	padding-top: 0;
+	margin-top: 0;
 }
 
 section h2 {
@@ -185,6 +186,7 @@ section li {
 	margin-left: 7%;
 	width: 1200px;
 	margin-bottom: 50px;
+	margin-right: 100px;
 }
 
 section img {
